cabal-version:       2.2

name:                chronos
version:             0.1.0.0
synopsis:            Benchmarking tool with focus on comparing results.
description:         This tool performs lazy benchmarking of shell commands with continuous feedback and improving precision.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
homepage:            https://github.com/knupfer/chronos
tested-with:         GHC == 8.6.3
copyright:           2019, Florian Knupfer
category:            Development, Performance, Testing, Benchmarking
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Chronos
  build-depends:       base >= 4
                     , time
                     , ansi-terminal
                     , process
                     , deepseq
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall -Werror

executable chronos
  main-is:             Main.hs
  build-depends:       chronos
                     , base >= 4
                     , process
                     , time
                     , ansi-terminal
                     , deepseq
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:        -Wall -Werror