cabal-version:       2.2

name:                chronos
version:             0.1.0.0
synopsis:            Benchmarking tool with focus on comparing results.
description:         This tool performs lazy benchmarking of shell commands with continuous feedback and improving precision.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
homepage:            https://github.com/knupfer/chronos
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
copyright:           2019, Florian Knupfer
category:            Development, Performance, Testing, Benchmarking
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Chronos
  other-modules:       Parser
  build-depends:       base >= 4 && < 5
                     , time
                     , ansi-terminal
                     , process
                     , deepseq
                     , containers
                     , terminal-size
                     , bytestring
                     , optparse-applicative
  hs-source-dirs:      src
                     , common
  default-language:    Haskell2010
  ghc-options:        -Wall -O2

executable chronos
  main-is:             Main.hs
  other-modules:       Parser
  build-depends:       base >= 4 && < 5
                     , chronos
                     , optparse-applicative
  hs-source-dirs:      bin
                     , common
  default-language:    Haskell2010
  ghc-options:        -Wall -O2

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       chronos
                     , base >= 4
  hs-source-dirs:      bench
  default-language:    Haskell2010
  ghc-options:        -Wall
